Wed May 26 13:14:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_init_copy): copy also positions.  [ruby-talk:100910]

Wed May 26 00:00:00 2004  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/syck.c (syck_new_parser): clear parser on init.
	  thanks, ts. [ruby-core:02931]

	* ext/syck/token.c (sycklex_yaml_utf8): buffer underflow.
	  thanks, ts. [ruby-core:02929]

	* lib/yaml/baseemitter.rb (indent_text): simpler flow block code.

Tue May 25 11:54:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_yield_0, proc_invoke, proc_arity): allow passing a block
	  to a Proc.  [ruby-dev:23533]

	* parse.y (block_par, block_var): ditto.

Tue May 25 01:50:17 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_i2d_ASN1_TYPE, ossl_ASN1_TYPE_free):
	  workaround for the versions earlier than OpenSSL-0.9.7.

Mon May 24 10:46:26 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/rdoc/generators/template/html/html.rb: SYSTEM identifiers
	  must be absolute URIs

Sat May 22 11:54:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* MANIFEST: add test/openssl/test_x509store.rb.

	* ext/tk/MANIFEST: add recent files.

Sat May 22 05:37:11 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/remote-tk.rb: (NEW library) controll Tk interpreters
	  on the other processes by Tcl/Tk's 'send' command

Fri May 21 09:22:05 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_method_parameters):
	  Add ()'s around parameters that don't have them

Fri May 21 02:21:11 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/csv.rb: fixed a few bugs around multi char record/field separator.

	* test/csv/test_csv.rb: added boundary test for above feature.

Thu May 20 17:02:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (check_sizeof): define result size.  [ruby-core:02911]

	* lib/mkmf.rb (create_header): macro name should not include equal
	  sign.
